--- a/front-end/src/pages/Cart/cart.css
+++ b/front-end/src/pages/Cart/cart.css
@@ -1,35 +1,8 @@
-.cart_head {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 3.5rem 0 2.5rem 0;
+._cart_main_container {
+    /* background-color: white; */
+    margin: 2rem 0;
+    /* padding: 1rem; */
 }
-
-.cart_head h2 {
-    font-weight: 550;
-    font-size: 1.8rem;
-}
-
-.cart_head .icon {
-    margin-right: 6px;
-}
-
-.continue_shop {
-    background-color: #18273a;
-    color: white;
-    border: none;
-    border-radius: 3px;
-    outline: none;
-    padding: 8px 30px;
-    font-size: 1.1rem;
-    cursor: pointer;
-}
-
-.continue_shop .link {
-    text-decoration: none;
-    color: white;
-}
-
 
 
 .empty {
@@ -57,17 +30,32 @@
 }
 
 .cart_container {
-    padding-top: 2rem;
+    padding: 2rem 1.5rem;
+    background-color: white;
 }
+
 
 .cart_container_mobile {
     display: none;
 }
 
+.cart_head {
+    margin: 0 0 2rem 0;
+}
+
+.cart_head h2 {
+    font-weight: 550;
+    font-size: 1.8rem;
+}
+
+.cart_head .icon {
+    margin-right: 6px;
+}
+
 .cart_container .cart_header {
     display: grid;
     grid-template-columns: 100px 4fr 1fr;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
     border-bottom: 1px solid #d6d6d6;
     padding-bottom: 10px;
     font-weight: 550;
@@ -75,18 +63,24 @@
 
 .cart_header h2 {
     font-weight: 550;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
 }
 
 
 .cart_contents {
     display: grid;
-    grid-template-columns: 70px 4.2fr 1fr;
+    grid-template-columns: 10px 4.8fr 1fr;
     align-items: center;
     border-bottom: 1px solid #efefef;
     padding-bottom: 10px;
     margin-bottom: 20px;
     gap: 1rem;
+    padding-right: 10px;
+}
+
+.cart_contents:last-child {
+    border: none;
+    padding-bottom: 0;
 }
 
 
@@ -122,7 +116,9 @@
 }
 
 .cart_product {
-    display: flex;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1.8fr;
     align-items: center;
 }
 
@@ -183,21 +179,22 @@
 }
 
 .cart_action div p {
-    font-weight: 550;
+    font-weight: normal;
     font-size: 1.2rem;
 }
 
-.cart_action div .total {
+.cart_action .total h2, .cart_action .total p {
     font-weight: 550;
+    font-size: 1.3rem;
 }
 
 .cart_action .checkout_btn {
-    padding: 8px 0;
-    font-size: 1.1rem;
+    padding: 10px 0;
+    font-size: 1.2rem;
     background-color: #18273a;
     color: white;
     border: none;
-    border-radius: 3px;
+    border-radius: 10px;
     cursor: pointer;
     margin-top: 2rem;
     width: 100%;
