--- a/front-end/src/pages/Shipping/shipping.css
+++ b/front-end/src/pages/Shipping/shipping.css
@@ -1,6 +1,15 @@
 .shipping_container {
-    width: 70vw;
+    width: 80vw;
     margin: 3rem auto;
+    background-color: white;
+    box-shadow: 0 0 2.5px #b5b4b4;
+    padding: 2rem;
+}
+
+.deliver_form h2 {
+    font-size: 1.7rem;
+    font-weight: 550;
+    margin-bottom: 1rem;
 }
 
 .form_group {
@@ -13,16 +22,65 @@
 
 .form_group input {
     margin-top: 10px;
-    /* border: 1px solid #adadad; */
+    border: 1px solid #adadad;
     border-radius: 3px;
-    /* padding: 8px; */
-    font-size: 1.2rem;
+    padding: 5px;
+    font-size: 1.1rem;
     width: 100%;
+    outline: none;
 }
 
 .form_group label {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 550;
+}
+
+.payment_method {
+    margin-bottom: 2rem;
+}
+
+.payment {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    cursor: pointer;
+    width: 10rem;
+    /* background-color: red; */
+    margin-top: 20px;
+    font-size: 1.2rem;
+    font-weight: 550;
+}
+
+
+.payment input {
+    display: none;
+}
+
+.radio_btn {
+    width: 18px;
+    height: 18px;
+    border: 1px solid #444444;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer;
+    padding: 2px;
+}
+
+.radio_btn::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color: #182e4b;
+    border-radius: 50%;
+
+    transform: scale(0);
+    transition: transform 0.15s;
+}
+
+.radio_input:checked+.radio_btn::after {
+    transform: scale(1);
 }
 
 
@@ -36,11 +94,12 @@
 .deliver_btn button {
     background-color: #18273a;
     color: white;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     padding: 10px 200px;
-    border-radius: 5px;
+    border-radius: 10px;
     border: none;
     cursor: pointer;
+    outline: none;
 }
 
 
