--- a/front-end/src/components/css/slider.css
+++ b/front-end/src/components/css/slider.css
@@ -147,15 +147,15 @@
 
 
 .content_img {
-    width: 100%;
-    /* height: 50%; */
+    width: 90rem;
+    height: 50%;
     position: relative;
 }
 
 .content_img img {
     /* flex: 1; */
     /* background-color: red; */
-    width: 110%;
+    width: 100%;
     height: 43rem;
     border: none;
     position: absolute;
