--- a/front-end/src/pages/OrderHistory/orderHistory.css
+++ b/front-end/src/pages/OrderHistory/orderHistory.css
@@ -1,11 +1,54 @@
 .orderHistory_container {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 1rem;
-    margin: 2rem 0;
+    width: 100%;
+    margin: 2rem 0 3rem 0;
+    /* background-color: white; */
+    /* padding: 2rem; */
+    min-height: 98vh;
 }
 
-.order_navigation {
-    background-color: aquamarine;
-    padding: 1rem;
+
+.orderHistory {
+    width: 100%;
+    height: 100%;
+}
+
+.orderHistory h2 {
+    font-weight: 550;
+    font-size: 1.7rem;
+    /* margin-bottom: 1rem; */
+    border-bottom: 1px solid #d7d7d7;
+    padding-bottom: 10px;
+}
+
+.orderHistory .orderHead, .history .order_ {
+    display: grid;
+    grid-template-columns: 1.5fr 1.2fr 1.2fr 1fr 1fr 1fr;
+    border-bottom: 1px solid #d7d7d7;
+    padding-bottom: 10px;
+    font-weight: 550;
+}
+
+.history .order_ {
+    border-bottom: 1px solid #f0f0f0;
+    padding-bottom: 15px;
+}
+
+.history .order_:last-child {
+    border-bottom: none;
+    padding-bottom: 0;
+}
+
+.history .order_ p {
+    font-size: 1.2rem;
+    font-weight: normal;
+}
+
+.view {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.view .eye {
+    margin-right: 5px;
 }
