--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -40,7 +40,7 @@
 
 .container {
   width: 100%;
-  padding: 1rem 0;
+  padding: 8px 0;
   background-color: #171b22;
   /* background-color: #1f2b3a; */
   z-index: 100;
@@ -74,12 +74,12 @@
 
 .logo h2 {
   margin-left: 5px;
-  font-size: 1.7rem;
+  font-size: 1.4rem;
   font-weight: 550;
 }
 
 .logo .shop_icon {
-  font-size: 1.6rem;
+  font-size: 1.3rem;
 }
 
 .navigation {
@@ -96,14 +96,14 @@
 }
 
 .menu_lists li p:nth-child(1) {
-  font-size: 1.05rem;
+  font-size: 0.8rem;
   margin: 0;
   padding: 0;
-  line-height: 1.2;
+  /* line-height: 1.2; */
 }
 
 .menu_lists li p:nth-child(2) {
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin: 0;
   padding: 0;
   font-weight: 550;
@@ -113,7 +113,7 @@
 
 .navigation li {
   /* margin-left: 1rem; */
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .navigation li:nth-child(2) {
@@ -131,15 +131,15 @@
 }
 
 .dropdown_email .icon {
-  font-size: 1.2rem;
+  font-size: 1rem;
   cursor: pointer;
 }
 
 .dropdown_menu {
   position: absolute;
-  top: 4rem;
+  top: 3rem;
   background-color: white;
-  width: 12rem;
+  width: 10rem;
   display: flex;
   flex-direction: column;
   padding: 10px;
@@ -167,7 +167,7 @@
 }
 
 .cart .cart_icon {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 550;
 }
 
@@ -176,17 +176,13 @@
 }
 
 .cart .incart {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   position: absolute;
   top: -15px;
-  right: -3px;
+  right: 3px;
   font-weight: 550;
-  background-color: #9a930d;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  object-fit: contain;
-  text-align: center;
+  color: #9a930d;
+ 
 }
 
 .cart div {
@@ -199,15 +195,20 @@
 .cart .cart_price {
   color: #c1e9a3ed;
   font-weight: 550;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
 }
 
 .menu_bar,
 .close_btn {
-  font-size: 2rem;
+  font-size: 1.5rem;
   display: none;
 }
 
+
+.admin_container {
+  display: flex;
+  /* margin-top: 10px; */
+}
 
 
 
