--- a/front-end/src/components/css/product.css
+++ b/front-end/src/components/css/product.css
@@ -20,9 +20,14 @@
     cursor: pointer;
 }
 
-.product img {
+._product-img {
     width: 100%;
-    height: 50vh;
+    height: 15rem;
+}
+
+._product-img img {
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
@@ -31,7 +36,7 @@
 }
 
 .content_ .title {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: 550;
     /* margin: 10px 0; */
     /* text-align: center; */
@@ -40,17 +45,18 @@
 
 .content_ .rating {
     margin: 1rem 0 0 0;
+    font-size: 1.2rem;
 }
 
 .content_ .price {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 550;
     margin-bottom: 20px;
 }
 
 .product .buy, .product .outOfStock {
-    padding: 10px;
-    font-size: 1.1rem;
+    padding: 8px;
+    font-size: 1rem;
     background-color: #18273a;
     color: white;
     border: none;
