--- a/front-end/src/components/css/searchBox.css
+++ b/front-end/src/components/css/searchBox.css
@@ -2,7 +2,7 @@
     display: flex;
     flex: 1;
     /* width: 100%; */
-    height: 2.9rem;
+    height: 2.2rem;
     align-items: flex-start;
     /* justify-content: center; */
     /* background-color: red; */
@@ -14,8 +14,8 @@
     height: 100%;
     /* border-radius: 5px; */
     /* height: 2.5rem; */
-    padding: 10px;
-    font-size: 1.1rem;
+    padding: 8px 10px;
+    font-size: 1rem;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     outline: none;
@@ -35,7 +35,7 @@
     background-color: #9a930d;
     color: black;
     padding: 5px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     height: 100%;
     width: 2.4rem;
     border-top-right-radius: 5px;
