--- a/front-end/src/components/css/slider.css
+++ b/front-end/src/components/css/slider.css
@@ -1,7 +1,7 @@
 
 .slider_container {
     width: 100%;
-    height: 120vh;
+    height: 110vh;
     display: flex;
     justify-content: space-between;
     /* background-color: #272E37; */
@@ -19,12 +19,12 @@
 
 .arrow {
     position: absolute;
-    top: -6rem;
+    top: -8rem;
     bottom: 0;
     margin: auto;
     background-color: #e9e9e9;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -55,7 +55,7 @@
 
 .social {
     position: absolute;
-    bottom: 15rem;
+    bottom: 7.5rem;
     left: 15px;
     z-index: 50%;
     /* display: none; */
@@ -71,7 +71,7 @@
 
 .social ul li a {
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: white;
     font-weight: bold;
 }
@@ -88,7 +88,8 @@
 
 .contents {
     display: flex;
-    width: 90vw;
+    /* align-items: center; */
+    width: 90%;
     margin: 0 auto;
     position: relative;
 }
@@ -100,38 +101,39 @@
 
 .content .title1 {
     text-transform: uppercase;
-    margin-bottom: 2px;
+    margin-bottom: -3px;
     font-weight: 550;
     letter-spacing: 2px;
+    font-size: 15px;
 }
 
 .content .title2 {
-    font-size: 3rem;
+    font-size: 2.3rem;
     font-weight: 550;
     letter-spacing: 2px;
 }
 
 .content .price {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 550;
-    color: #b6e394ed;
+    color: #a0e36eed;
 }
 
 .content .des {
-    margin: 1rem 0;
-    font-size: 1.2rem;
+    margin: 10px 0;
+    font-size: 1rem;
     letter-spacing: 2px;
-    width: 40rem;
+    width: 42rem;
     border: none;
 }
 
 .cta_btns {
-    margin-top: 2rem;
+    margin-top: 15px;
 }
 
 .cta_btns .buy, .cta_btns .explore {
-    padding: 8px 50px;
-    font-size: 1.1rem;
+    padding: 7px 40px;
+    font-size: 1rem;
     border: none;
     border-radius: 3px;
     cursor: pointer;
@@ -148,7 +150,7 @@
 
 .content_img {
     width: 90rem;
-    height: 50%;
+    height: 40rem;
     position: relative;
 }
 
@@ -156,11 +158,11 @@
     /* flex: 1; */
     /* background-color: red; */
     width: 100%;
-    height: 43rem;
+    height: 100%;
     border: none;
     position: absolute;
-    top: -0.5rem;
-    right: -3rem;
+    top: -3rem;
+    right: 1rem;
     object-fit: cover;
 }
 
