--- a/front-end/src/components/css/featuredInfo.css
+++ b/front-end/src/components/css/featuredInfo.css
@@ -1,38 +1,45 @@
 .featured {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0 1rem 0 10px;
+    gap: 10px;
 }
 
 .featuredItem {
-    flex: 1;
-    margin: 0px 20px;
-    padding: 30px;
+    /* margin: 0px 20px; */
+    padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 1px 2px 14px 9px rgba(247, 247, 247, 0.61);
+        -moz-box-shadow: 1px 2px 14px 9px rgba(247, 247, 247, 0.61);
+        box-shadow: 1px 2px 14px 9px rgba(247, 247, 247, 0.61);
 }
 
 .featuredTitle {
-    font-size: 20px;
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #e6e6e6;
+    padding-bottom: 10px;
+}
+
+.featuredTitle .icon {
+    margin-right: 5px;
+}
+
+.featuredTitle .icon_ {
+    margin-right: 10px;
 }
 
 .featuredMoneyContainer {
     margin: 10px 0px;
-    display: flex;
-    align-items: center;
 }
 
 .featuredMoney {
-    font-size: 30px;
-    font-weight: 600;
-}
-
-.featuredMoneyRate {
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
+    font-size: 1.4rem;
+    font-weight: 550;
+    color: #2b2b2b;
 }
 
 .featuredIcon {
@@ -41,22 +48,24 @@
     color: green;
 }
 
-.featuredIcon.negative {
-    color: red;
-}
-
-.featuredSub {
-    font-size: 15px;
-    color: gray;
-}
 
 .chart {
-    margin: 20px;
+    margin: 10px 15px 10px 12px;
     padding: 20px;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 1px 2px 14px 9px rgba(247, 247, 247, 0.61);
+        -moz-box-shadow: 1px 2px 14px 9px rgba(247, 247, 247, 0.61);
+        box-shadow: 1px 2px 14px 9px rgba(247, 247, 247, 0.61);
 }
 
 .chartTitle {
+    font-size: 1.2rem;
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #e6e6e6;
+    padding-bottom: 10px;
+}
+
+.chartTitle .icon {
+    margin-right: 10px;
 }
