--- a/front-end/src/components/css/sideNav.css
+++ b/front-end/src/components/css/sideNav.css
@@ -1,15 +1,32 @@
 .sidebar {
     flex: 1;
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     background-color: #fbfbff;
     /* position: sticky; */
     /* top: -50px; */
+    padding: 0 1rem 1rem 2.1rem;
+    border-right: 1px solid #dddddd;
+}
+
+.adminImg {
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.adminImg .admin_icon {
+    font-size: 7rem;
+    /* height: 8rem; */
+    border-radius: 50%;
+    border: 1px solid #b6b6b6;
 }
 
 .sidebarWrapper {
-    padding: 20px;
+    padding: 10px;
     color: #555;
+    /* background-color: red; */
 }
 
 .sidebarMenu {
@@ -17,13 +34,21 @@
 }
 
 .sidebarTitle {
-    font-size: 13px;
-    color: #bbbaba;
+    font-size: 1.2rem;
+    color: #5f5f5f;
+    text-align: center;
+    margin: 10px 0 1rem 0;
+    font-weight: normal;
 }
 
 .sidebarList {
     list-style: none;
     padding: 5px;
+}
+
+.sidebarList .link {
+    text-decoration: none;
+    color: #2b2b2b;
 }
 
 .sidebarListItem {
@@ -32,12 +57,13 @@
     display: flex;
     align-items: center;
     border-radius: 10px;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    margin-bottom: 10px;
 }
 
 .sidebarListItem.active,
 .sidebarListItem:hover {
-    background-color: rgb(240, 240, 255);
+    background-color: #f0f0ff;
 }
 
 .sidebarIcon {
