--- a/front-end/src/components/css/slider.css
+++ b/front-end/src/components/css/slider.css
@@ -1,15 +1,18 @@
 
 .slider_container {
     width: 100%;
-    height: 110vh;
+    min-height: 105vh;
     display: flex;
     justify-content: space-between;
     /* background-color: #272E37; */
-    background-image: linear-gradient(to bottom,#1F2A3A, #3B4454, #6F7885, #A3A8B1, #F6F6F6), url('../../../public/assets/bg.png');
+    background-image: linear-gradient(to bottom,#1F2A3A, #3B4454, #6F7885, #A3A8B1, #fdfdfd), url('../../../public/assets/bg.png');
     background-repeat: no-repeat;
+    background-size: contain;
     position: relative;
     overflow: hidden;
     transition: all .3s ease;
+    border: none;
+    outline: none;
 }
 
 .slider_container .container {
