--- a/front-end/src/components/css/widgetLg.css
+++ b/front-end/src/components/css/widgetLg.css
@@ -1,62 +1,54 @@
 .widgetLg {
-    flex: 2;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 1px 2px 14px 9px rgba(247, 247, 247, 0.61);
+        -moz-box-shadow: 1px 2px 14px 9px rgba(247, 247, 247, 0.61);
+        box-shadow: 1px 2px 14px 9px rgba(247, 247, 247, 0.61);
     padding: 20px;
 }
 
 .widgetLgTitle {
-    font-size: 22px;
-    font-weight: 600;
+    font-size: 1.2rem;
+    font-weight: 550;;
+    border-bottom: 1px solid #cecece;
+    padding-bottom: 10px;
 }
 
 .widgetLgTable {
     width: 100%;
-    border-spacing: 20px;
+    /* border-spacing: 20px; */
 }
 
-.widgetLgTh {
-    text-align: left;
+.widgetLgTable .head {
+    display: grid;
+    grid-template-columns: 0.57fr 0.6fr 0.7fr 1fr 1fr;
+    gap: 20px;
+    border-bottom: 1px solid #e6e6e6;
+    padding-bottom: 10px;
 }
 
-.widgetLgUser {
-    display: flex;
-    align-items: center;
-    font-weight: 600;
+.widgetLgTable .head p {
+    font-weight: 550;
+    font-size: 1rem;
 }
 
-.widgetLgImg {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
+.widgetLgTable .t_row {
+    display: grid;
+    grid-template-columns: 0.6fr 0.7fr 7rem 1fr 1fr;
+    gap: 10px;
+    border-bottom: 1px solid #fbfbfb;
+    padding-bottom: 10px;
 }
 
-.widgetLgDate,
-.widgetLgAmount {
-    font-weight: 300;
+.widgetLgTable .t_row p {
+    font-weight: normal;
+    font-size: 1rem;
 }
 
-.widgetLgButton {
-    padding: 5px 7px;
-    border: none;
-    border-radius: 10px;
-}
 
-.widgetLgButton.approved {
-    background-color: #e5faf2;
-    color: #3bb077;
-}
 
-.widgetLgButton.declined {
-    background-color: #fff0f1;
-    color: #d95087;
-
-}
-
-.widgetLgButton.pending {
-    background-color: #ebf1fe;
-    color: #2a7ade;
-
+.widgetLgTable .success_, .widgetLgTable .danger_, .widgetLgTable ._pending_ {
+    padding: 4px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-size: 0.8rem !important;
 }
