--- a/front-end/src/pages/Order/order.css
+++ b/front-end/src/pages/Order/order.css
@@ -1,36 +1,10 @@
-.order_info {
-    background-color: white;
-    padding: 2rem;
-}
-
-.orderId {
-    background-color: #1d314a;
+.order__Id {
+    background-color: #5680b3;
     color: white;
-    padding: 10px 10px;
+    padding: 5px;
     border-radius: 5px;
-    font-size: 1.3rem;
-}
-
-
-.shipping_details .head_ {
-    border-bottom: 1px solid #f2f2f2;
-    padding-bottom: 10px;
-    margin: 20px 0 10px 0;
-}
-
-.shipping_details h2,
-.yourOrder h2 {
-    font-size: 1.5rem;
-    font-weight: 550;
-}
-
-.shipping_details span {
-    font-weight: 550;
-    margin-right: 10px;
-}
-
-.shipping_details p {
-    font-size: 1.25rem;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
 }
 
 .payment_ {
@@ -39,59 +13,52 @@
 
 .success_, .danger_ {
     background-color: #19b719;
-    padding: 10px;
+    padding: 5px;
     color: white;
-    border-radius: 3px;
-    font-size: 1.3rem;
+    border-radius: 5px;
+    /* font-size: 1.3rem; */
 }
 
 .danger_ {
     background-color: #e84b4b;
 }
 
-.payment_ h2, .yourOrder h2 {
+.order_info .payment_ {
+    margin-top: 2rem;
+}
+
+.payment_ h2{
     border-bottom: 1px solid #f2f2f2;
     padding-bottom: 10px;
     font-weight: 550;
 }
 
 
-.yourOrder {
-    margin-top: 3rem;
-}
-
-.yourOrder h2 {
-    border-bottom: 1px solid #f2f2f2;
-    padding-bottom: 10px;
-}
-
 .order__content {
     width: 100%;
     /* background-color: red; */
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center; */
-    padding: 20px 0;
+    padding: 15px 0 0 0;
     border-bottom: 1px solid #fcfcfc;
 }
 
 .order__content:last-child {
     border: none;
-    padding: 20px 0 0 0;
+    padding: 15px 0 0 0;
 }
 
 .order__content .item {
     display: grid;
-    grid-template-columns: 0.5fr 1fr;
+    grid-template-columns: 12rem 1fr;
     align-items: center;
-    justify-content: flex-start;
-    gap: 1rem;
+    /* justify-content: flex-start; */
+    /* background-color: yellow; */
 }
 
 .order__content .item_img {
-    width: 12rem;
-    height: 12rem;
+    width: 10rem;
+    height: 10rem;
     /* background-color: red; */
+    margin-right: 10px;
 }
 
 .order__content .item_img img {
@@ -100,95 +67,9 @@
     object-fit: contain;
 }
 
-.order_actions {
-    display: flex;
-    align-items: center;
-    margin-left: 50px;
+.orderAction_container {
+    padding: 5rem 3.4rem 2rem 1rem;
 }
-
-.order_actions .icon {
-    font-size: 1.3rem;
-    margin-right: 5px;
-}
-
-.order_actions .link {
-    background-color: #18273a;
-    padding: 5px 10px;
-    color: white;
-    border-radius: 5px;
-    font-size: 1rem;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-}
-
-.order_actions .delete_btn {
-    display: flex;
-    align-items: center;
-    background-color: #b11717;
-    color: white;
-    padding: 5px 10px;
-    font-size: 1rem;
-    border-radius: 5px;
-    margin-left: 15px;
-}
-
-.order_actions .delete_btn .icon {
-    color: white;
-}
-
-
-
-.placeOrder_action {
-    width: 100%;
-    background-color: #ffffff;
-    padding: 2rem;
-}
-
-.placeOrder_action h2 {
-    font-size: 1.5rem;
-    font-weight: 550;
-    border-bottom: 1px solid #f5f5f5;
-    padding-bottom: 10px;
-}
-
-.placeOrder_action .info,
-.placeOrder_action .total {
-    display: grid;
-    grid-template-columns: 2fr 0.7fr;
-    margin: 5px 0;
-    padding: 0;
-    border-bottom: 1px solid #f8f8f8;
-    padding-bottom: 10px;
-}
-
-.placeOrder_action .info p {
-    font-size: 1.2rem;
-}
-
-.placeOrder_action .total p {
-    font-weight: 550;
-    font-size: 1.3rem;
-}
-
-.placeOrder_btn {
-    width: 100%;
-    font-size: 1.2rem;
-    background-color: #18273a;
-    color: white;
-    padding: 8px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    margin-top: 20px;
-    cursor: pointer;
-}
-
-.placeOrder_btn:hover {
-    background-color: #1d314a;
-}
-
-
 
 
 
