--- a/front-end/src/pages/PlaceOrder/placeOrder.css
+++ b/front-end/src/pages/PlaceOrder/placeOrder.css
@@ -1,6 +1,13 @@
-.placeOrder_info {
+.order_container {
+    display: grid;
+    grid-template-columns: 2fr 1.2fr;
+    gap: 5px;
+    align-items: flex-start;
+}
+
+.order_info {
     background-color: white;
-    padding: 2rem;
+    padding: 1rem 1rem 2rem 3.5rem;
 }
 
 .shipping_details .head {
@@ -13,34 +20,25 @@
 }
 
 .shipping_details .link {
-    display: flex;
-    align-items: center;
     text-decoration: none;
-    color: white;
-    font-size: 1rem;
-    background-color: #18273a;
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    padding: 5px 10px;
 }
 
 .shipping_details .link .icon {
-    margin-right: 5px;
+    font-size: 1.3rem;
 }
 
-.shipping_details h2, .yourOrder h2 {
-    font-size: 1.5rem;
+.order_info h2 {
+    font-size: 1.4rem;
     font-weight: 550;
 }
 
-.shipping_details span {
+.order_info span {
     font-weight: 550;
     margin-right: 10px;
 }
 
-.shipping_details p {
-    font-size: 1.25rem;
+.order_info p {
+    font-size: 1.05rem;
 }
 
 
@@ -59,25 +57,27 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 10px 0;
     border-bottom: 1px solid #fcfcfc;
 }
 
 .order_content:last-child {
     border: none;
-    padding: 20px 0 0 0;
+    padding: 10px 0 0 0;
 }
 
 .order_content .item {
     display: grid;
-    grid-template-columns: 0.5fr 1fr;
+    grid-template-columns: 12rem 1fr;
     align-items: center;
+    /* background-color: yellow; */
 }
 
 .item_img {
-    width: 12rem;
-    height: 12rem;
-    margin-right: 20px;
+    width: 10rem;
+    height: 10rem;
+    /* margin-right: 20px; */
+    /* background-color: red; */
 }
 
 .item_img img {
@@ -86,82 +86,80 @@
     object-fit: contain;
 }
 
-.order_actions {
-    display: flex;
-    align-items: center;
-    margin-left: 50px;
+.item p {
+    font-size: 1.05rem;
 }
 
-.order_actions .icon {
+.itemActions {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+
+.itemActions .icon {
     font-size: 1.3rem;
     margin-right: 5px;
 }
 
-.order_actions .link {
-    background-color: #18273a;
-    padding: 5px 10px;
-    color: white;
-    border-radius: 5px;
-    font-size: 1rem;
-    display: flex;
-    align-items: center;
+.itemActions .link {
+    font-size: 0.9rem;
     text-decoration: none;
 }
 
-.order_actions .delete_btn {
-    display: flex;
-    align-items: center;
-    background-color: #b11717;
-    color: white;
-    padding: 5px 10px;
-    font-size: 1rem;
-    border-radius: 5px;
-    margin-left: 15px;
+.itemActions .delete_btn {
+    margin-left: 10px;
 }
 
-.order_actions .delete_btn .icon {
-    color: white;
+
+.itemActions .delete_btn .icon {
+    color: #b10909;
 }
 
 
 
-.placeOrder_action {
+.Order_action {
     width: 100%;
+    height: 100%;
     background-color: #ffffff;
-    padding: 2rem;
+    -webkit-box-shadow: -3px -2px 0px 0px rgba(245, 245, 245, 0.61);
+    -moz-box-shadow: -3px -2px 0px 0px rgba(245, 245, 245, 0.61);
+    box-shadow: -3px -2px 0px 0px #fdfdfdbd;
+    padding: 2rem 3.4rem 2rem 1rem;
 }
 
-.placeOrder_action h2 {
-    font-size: 1.5rem;
+.Order_action h2 {
+    font-size: 1.3rem;
     font-weight: 550;
     border-bottom: 1px solid #f5f5f5;
     padding-bottom: 10px;
 }
 
-.placeOrder_action .info, .placeOrder_action .total {
-    display: grid;
-    grid-template-columns: 2fr 0.7fr;
+.Order_action .info_, .Order_action .total {
+    display: flex;
+    justify-content: space-between;
     margin: 5px 0;
     padding: 0;
     border-bottom: 1px solid #f8f8f8;
     padding-bottom: 10px;
 }
 
-.placeOrder_action .info p {
-    font-size: 1.2rem;
+.Order_action .info_ p {
+    font-size: 1.05rem;
+    font-weight: normal;
 }
 
-.placeOrder_action .total p {
+.Order_action .total p {
     font-weight: 550;
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
 
-.placeOrder_btn {
+.Order_action_btn {
     width: 100%;
-    font-size: 1.2rem;
+    font-size: 1rem;
     background-color: #18273a;
     color: white;
-    padding: 8px;
+    padding: 7px;
     border-radius: 10px;
     border: none;
     outline: none;
@@ -169,7 +167,7 @@
     cursor: pointer;
 }
 
-.placeOrder_btn:hover {
+.Order_action_btn:hover {
     background-color: #1d314a;
 }
 
