--- a/front-end/src/pages/Product/product.css
+++ b/front-end/src/pages/Product/product.css
@@ -1,6 +1,5 @@
 .product_container {
-    width: 80vw;
-    margin: 4rem auto;
+    padding: 4rem 5rem 2rem 5rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: flex-start;
@@ -14,7 +13,7 @@
 }
 .product-img {
     width: 100%;
-    height: 90%;
+    height: 80%;
     object-fit: contain;
 }
 
@@ -23,20 +22,21 @@
 }
 
 .name {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 550;
     /* letter-spacing: 2px; */
 }
 
 p {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin-top: 10px;
     font-weight: normal;
 }
 
 .des {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
     /* padding-bottom: 10px; */
+    font-weight: normal;
 }
 
 .product-contents .qty {
@@ -63,7 +63,7 @@ p {
 }
 
 .qty .icon {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     cursor: pointer;
 }
 
@@ -83,9 +83,9 @@ p {
     background-color: #18273a;
     color: white;
     border: none;
-    border-radius: 3px;
-    padding: 10px;
-    font-size: 1.1rem;
+    border-radius: 5px;
+    padding: 8px;
+    font-size: 1rem;
     margin-top: 20px;
     text-transform: uppercase;
     width: 100%;
@@ -107,19 +107,6 @@ p {
 
  /* Tablet Devices :: Media Queries */
  @media screen and (min-width : 768px) and (max-width : 1024px) {
-    .back_btn {
-        margin-top: 2rem;
-        width: 7rem;
-    }
-    
-    .back_btn .back {
-        font-size: 1.4rem;;
-    }
-    
-    .back_icon {
-        margin-right: 5px;
-    }
-    
     .product_container {
         width: 100%;
         grid-template-columns: 1.2fr 1.5fr;
@@ -176,19 +163,6 @@ p {
 
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
-    .back_btn {
-        margin-top: 2rem;
-        width: 6rem;
-    }
-    
-    .back_btn .back {
-        font-size: 1.2rem;;
-    }
-    
-    .back_icon {
-        margin-right: 5px;
-    }
-    
     .product_container {
         width: 100%;
         display: flex;
