--- a/front-end/src/pages/Shipping/shipping.css
+++ b/front-end/src/pages/Shipping/shipping.css
@@ -1,13 +1,9 @@
-.shipping_container {
-    width: 80vw;
-    margin: 3rem auto;
-    background-color: white;
-    box-shadow: 0 0 2.5px #b5b4b4;
-    padding: 2rem;
+.deliver_form {
+    padding: 2rem 3.5rem 2rem 3.5rem;
 }
 
 .deliver_form h2 {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
     font-weight: 550;
     margin-bottom: 1rem;
 }
@@ -16,7 +12,6 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 2rem;
-    font-size: 1.1rem;
 }
 
 
@@ -25,13 +20,13 @@
     border: 1px solid #adadad;
     border-radius: 3px;
     padding: 5px;
-    font-size: 1.1rem;
+    font-size: 1rem;
     width: 100%;
     outline: none;
 }
 
 .form_group label {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 550;
 }
 
@@ -48,7 +43,7 @@
     width: 10rem;
     /* background-color: red; */
     margin-top: 20px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 550;
 }
 
@@ -58,8 +53,8 @@
 }
 
 .radio_btn {
-    width: 18px;
-    height: 18px;
+    width: 17px;
+    height: 17px;
     border: 1px solid #444444;
     border-radius: 50%;
     margin-right: 10px;
@@ -94,8 +89,8 @@
 .deliver_btn button {
     background-color: #18273a;
     color: white;
-    font-size: 1.2rem;
-    padding: 10px 200px;
+    font-size: 1rem;
+    padding: 8px 200px;
     border-radius: 10px;
     border: none;
     cursor: pointer;
