--- a/front-end/src/pages/Admin/Dashboard/dashboard.css
+++ b/front-end/src/pages/Admin/Dashboard/dashboard.css
@@ -4,3 +4,10 @@
     gap: 5px;
     padding: 0 1rem 0 0.9rem;
 }
+
+/* Tablet Devices :: Media Queries */
+@media screen and (min-width : 768px) and (max-width : 1024px) {
+    .homeWidgets {
+        grid-template-columns: 1fr;
+    }
+}
