--- a/front-end/src/components/css/searchBox.css
+++ b/front-end/src/components/css/searchBox.css
@@ -37,10 +37,40 @@
     padding: 5px;
     font-size: 1.3rem;
     height: 100%;
-    width: 2.4rem;
+    width: 3.5rem;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     outline: none;
     border: none;
     cursor: pointer;
+}
+
+
+/* Tablet Devices :: Media Queries */
+@media screen and (min-width : 768px) and (max-width : 1024px) {
+    .search {
+        display: flex;
+        flex: 1;
+        /* width: 100%; */
+        height: 3.7rem;
+        align-items: flex-start;
+        /* justify-content: center; */
+        /* background-color: red; */
+        margin: 0;
+    }
+
+    .search input {
+        font-size: 1.6rem;
+    }
+
+}
+
+
+/* Mobile Devices :: Media Queries */
+@media screen and (min-width : 320px) and (max-width : 480px) {
+    .search {
+        height: 2.7rem;
+        align-items: flex-start;
+        margin: 0;
+    }
 }
