--- a/front-end/src/components/css/slider.css
+++ b/front-end/src/components/css/slider.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     /* background-color: #272E37; */
-    background-image: linear-gradient(to bottom,#1F2A3A, #3B4454, #6F7885, #A3A8B1, #fdfdfd), url('../../../public/assets/bg.png');
+    background-image: linear-gradient(to bottom,#1F2A3A, #3B4454, #6F7885, #A3A8B1, #f7f7f7), url('../../../public/assets/bg.png');
     background-repeat: no-repeat;
     background-size: contain;
     position: relative;
@@ -79,9 +79,6 @@
     font-weight: bold;
 }
 
-/* .slider_contents {
-    
-} */
 
 .slide {
     width: 100vw;
@@ -145,14 +142,14 @@
 
 .cta_btns .buy {
     background-color: transparent;
-    border: 1px solid white;
+    border: 2px solid white;
     color: white;
     margin-right: 2rem;
 }
 
 
 .content_img {
-    width: 90rem;
+    width: 80rem;
     height: 40rem;
     position: relative;
 }
@@ -173,10 +170,10 @@
 @media screen and (min-width : 768px) and (max-width : 1024px) {
     .slider_container {
         width: 100%;
-        /* height: 120vh; */
-        background-color: #2e2d2d;
+        height: 120vh;
+        /* background-color: #2e2d2d; */
     }
-        
+
     .arrow {
         bottom: -12rem;
         width: 65px;
@@ -208,7 +205,7 @@
     
 
     .content {
-        margin-top: 5rem;
+        margin-top: 3rem;
     }
    
     .content .title1 {
@@ -237,8 +234,13 @@
         font-size: 1.5rem;
     }
 
+    .cta_btns .explore {
+        padding: 15px 60px;
+    }
+
     .cta_btns .buy {
         margin-right: 2rem;
+        border: 2px solid white;
     }
 
         
@@ -255,7 +257,7 @@
         height: 43rem;
         border: none;
         position: absolute;
-        top: -3rem;
+        top: -2rem;
         right: 0;
         object-fit: contain;
     }
@@ -267,15 +269,15 @@
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
     .slider_container {
-        height: 135vh;
-        background-color: #1c1c1c;
+        height: 165vh;
+        /* background-color: #1c1c1c; */
     }
     
         
     .arrow {
         width: 60px;
         height: 60px;
-        bottom: -13rem;
+        bottom: -30rem;
     }
 
     .arrow2 {
@@ -304,7 +306,7 @@
 
     .slide {
         width: 100vw;
-        height: 130vh;
+        height: 160vh;
     }
     
     .contents {
@@ -314,7 +316,7 @@
     }
 
     .content {
-        margin-top: 1rem;
+        margin-top: 2rem;
     }
 
         
@@ -323,6 +325,7 @@
     }
 
     .content .title2 {
+        margin-top: 5px;
         font-size: 2rem;
     }
 
@@ -331,7 +334,7 @@
     }
 
     .content .des {
-        font-size: 1.2rem;
+        font-size: 1.29rem;
         width: 100%;
     }
 
@@ -343,13 +346,18 @@
         margin-top: 2rem;
     }
 
-    .cta_btns .buy, .cta_btns .explore {
-        padding: 12px 32px;
+    .cta_btns .buy {
+        width: 100%;
+        margin-right: 1rem;
+        padding: 12px 0;
         font-size: 1.2rem;
     }
 
-    .cta_btns .buy {
-        margin-right: 1rem;
+
+    .cta_btns .explore {
+        width: 100%;
+        padding: 14.5px 0;
+        font-size: 1.2rem;
     }
 
         
@@ -364,7 +372,7 @@
         height: 42rem;
         border: none;
         position: absolute;
-        top: -6.5rem;
+        top: -4rem;
         right: -5.5rem;
         object-fit: contain;
     }
