--- a/front-end/src/components/css/widgetLg.css
+++ b/front-end/src/components/css/widgetLg.css
@@ -12,6 +12,10 @@
     padding-bottom: 10px;
 }
 
+.tablet_view {
+    display: none;
+}
+
 .widgetLgTable {
     width: 100%;
     /* border-spacing: 20px; */
@@ -51,4 +55,59 @@
     border-radius: 5px;
     color: white;
     font-size: 0.8rem !important;
+}
+
+
+/* Tablet Devices :: Media Queries */
+@media screen and (min-width : 768px) and (max-width : 1024px) {
+    .widgetLgTitle {
+        font-size: 1.9rem;
+        font-weight: 500;
+        border-bottom: 1.7px solid #cecece;
+    }
+
+    .tablet_view {
+        display: block;
+    }
+
+    .widgetLgTable {
+        display: none;
+    }
+
+    .tablet_view .head {
+        display: grid;
+        grid-template-columns: 0.55fr 0.4fr 0.45fr 0.9fr;
+        gap: 20px;
+        border-bottom: 1.7px solid #cecece;
+        padding-bottom: 10px;
+    }
+
+    .tablet_view .head p {
+        font-weight: 500;
+        font-size: 1.65rem;
+    }
+
+    .tablet_view .t_row {
+        display: grid;
+        grid-template-columns: 0.6fr 0.5fr 8.5rem 0.9fr;
+        border-bottom: 1.7px solid #fbfbfb;
+        padding-bottom: 10px;
+    }
+
+    .tablet_view .t_row p {
+        font-weight: normal;
+        font-size: 1.4rem;
+    }
+
+
+
+    .tablet_view .success_,
+    .tablet_view .danger_,
+    .tablet_view ._pending_ {
+        padding: 4px;
+        text-align: center;
+        border-radius: 5px;
+        color: white;
+        font-size: 0.9rem !important;
+    }
 }
