--- a/front-end/src/pages/Cart/cart.css
+++ b/front-end/src/pages/Cart/cart.css
@@ -109,17 +109,16 @@
     /* object-position: left; */
 }
 
-.product_name {
-    width: 20rem;
-    margin: 0;
-    /* background-color: red; */
-}
-
 .cart_product {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 2fr;
     align-items: center;
+}
+
+
+.tablet_name {
+    display: none;
 }
 
 .cart_product p, .subtotal p {
@@ -166,7 +165,7 @@
 }
 
 .cart_action > h2 {
-    border-bottom: 1px solid #c4c4c4;
+    border-bottom: 2px solid #ededed;
     padding-bottom: 10px;
     margin-bottom: 20px;
     font-weight: 550;
@@ -177,7 +176,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #f8f8f8;
+    border-bottom: 2px solid #f8f8f8;
     padding-bottom: 10px;
     margin-bottom: 10px;
     /* font-size: 1.1rem; */
@@ -218,77 +217,98 @@
 
 /* Tablet Devices :: Media Queries */
 @media screen and (min-width : 768px) and (max-width : 1024px) {
+    .cart_container {
+        padding: 2rem 0rem;
+    }
+
     .cart_head h2 {
-        font-size: 2.2rem;
+        font-size: 2.1rem;
     }
 
-    .continue_shop {
-        font-size: 1.5rem;
+    .cart_container .cart_header {
+        margin-bottom: 1.2rem;
+        border-bottom: 2px solid #f0f0f0;
     }
 
-    
     .cart_header h2 {
+        font-size: 1.9rem;
+    }
+
+    .delete_btn {
         font-size: 2rem;
     }
-    
-    .delete_btn {
-        font-size: 2.2rem;
-    }
 
-    
-    .cart_product p, .subtotal p {
-        font-size: 1.7rem;
-    }
-    
-        
-    .product_name {
-        width: 20rem;
-        margin: 0;
+
+    .cart_product .cart_img {
+        width: 15rem;
+        height: 12rem;
+        /* margin-right: 10px; */
         /* background-color: red; */
     }
 
-    .cart_product {
+
+    ._name {
+        display: none;
+    }
+
+    .tablet_name {
+        display: block;
+    }
+
+    .cart_product p,
+    .subtotal p {
+        font-weight: normal;
+        /* margin-bottom: 20px; */
+        font-size: 1.75rem;
+    }
+
+    .cart_product ._price {
+        margin-bottom: 5px;
+    }
+
+
+    .cart_product .qty {
+        margin-top: 10px;
         display: flex;
         align-items: center;
     }
 
-    .cart_product p, .subtotal p {
-        font-weight: 550;
-        /* margin-bottom: 20px; */
-        font-size: 1.8rem;
-        font-weight: normal;
-    }
-
-    .cart_product ._price {
-        margin-bottom: 15px;
-    }
-
     .qty .icon {
-        font-size: 2rem;
+        font-size: 1.2rem;
+        margin-left: 10px;
     }
 
-    
+    .qty .add {
+        margin-left: 0;
+    }
+
     .cart_action {
         width: 100%;
+        height: 100%;
+        background-color: #ffffff;
+        -webkit-box-shadow: -3px -2px 0px 0px rgba(245, 245, 245, 0.61);
+        -moz-box-shadow: -3px -2px 0px 0px rgba(245, 245, 245, 0.61);
+        box-shadow: -3px -2px 0px 0px #fdfdfdbd;
+        padding: 5.5rem 1rem 2rem 1rem;
     }
 
-    .cart_action > h2 {
-        font-size: 2rem;
+    .cart_action>h2 {
+        font-size: 1.9rem;
     }
-    
+
+
     .cart_action div p {
-        font-size: 1.6rem;
-        font-weight: normal;
+        font-size: 1.7rem;
     }
 
-    .cart_action .total h2, .cart_action .total p  {
-        font-weight: 550;
+    .cart_action .total h2,
+    .cart_action .total p {
         font-size: 1.8rem;
     }
-    
+
     .cart_action .checkout_btn {
-        padding: 13px 0;
-        font-size: 1.7rem;
+        padding: 10px 0;
+        font-size: 1.8rem;
     }
     
 
@@ -301,10 +321,11 @@
         flex-direction: column-reverse;
         align-items: flex-start;
         margin: 2rem 0 2rem 0;
+        padding: 0;
     }
     
     .cart_head h2 {
-        /* font-size: 1.8rem; */
+        font-size: 1.9rem;
         margin-top: 2rem;
     }
     
@@ -312,9 +333,6 @@
         margin-right: 6px;
     }
     
-    .continue_shop {
-        font-size: 1.2rem;
-    }
     
     .cart_container {
         display: none;
@@ -322,96 +340,101 @@
 
     .cart_container_mobile {
         display: block;
+        width: 100%;
     }
 
     .cart_container_mobile .cart_header {
         display: block;
-        border-bottom: 1px solid #dfdfdf;
+        border-bottom: 2px solid #dfdfdf;
         padding-bottom: 10px;
     }
     
     .cart_header h2 {
         font-weight: 550;
-        font-size: 1.6rem;
+        font-size: 1.8rem;
     }
     
     
-    .cart_container_mobile .cart_contents {
-        display: flex;
-        flex-direction: row-reverse;
-        /* background-color: red; */
-        justify-content: space-between;
-        align-items: flex-end;
+    .cart_container_mobile .cart___contents {
+        width: 100%;
     }
-    
-    .content_header h2 {
-        font-size: 1.5rem;
+
+    .itemContent_ {
+        width: 100%;
     }
    
     .delete_btn {
-        font-size: 2rem;
+        font-size: 1.9rem;
     }
     
-    .cart_product_ {
+    .cart__product_ {
         margin-top: 20px;
+        margin-bottom: 50px;
+        border-bottom: 1px solid #fafafa;
+        padding-bottom: 20px;
+    }
+    .cart__item_head ._img {
+        width: 20rem;
+        height: 13rem;
+        /* background-color: red; */
     }
 
-    .cart__head {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    
-    ._img {
-        width: 12rem;
-    }
-
-    ._img img {
+    .cart__item_head ._img img {
         width: 100%;
+        height: 13rem;
         object-fit: contain;
     }
 
-    .cart__head p {
+    .cart__item_head p {
         font-weight: normal;
-        font-size: 1.4rem;
+        font-size: 1.35rem;
     }
     
     .cart_product ._price {
         margin-bottom: 15px;
     }
 
-    .cart_footer {
+    .cart_item_footer {
         display: flex;
-        align-items: flex-start;
+        align-items: flex-end;
         justify-content: space-between;
     }
 
-    .cart_footer .qty {
-        font-size: 1.4rem;
+    .cart_item_footer .qty {
+        font-size: 1.35rem;
         display: flex;
         align-items: center;
     }
 
+    .cart_item_footer .qty .icon {
+        font-size: 1.7rem;
+        margin-left: 10px;
+    }
+
+    .cart_item_footer .qty .add {
+        margin: 0;
+    }
 
     .cart_action {
-        width: 100%;
-        background-color: #ffffff;
-        padding: 2rem;
+        padding: 1rem 0 2rem 0;
     }
-
-    .cart_action > h2 {
-        font-size: 1.5rem;
-    }
-
     
-    .cart_action div p {
-        font-weight: normal;
-        font-size: 1.2rem;
+    .cart_action>h2 {
+        font-size: 1.6rem;
     }
 
-    .cart_action .total h2, .cart_action .total p  {
-        font-weight: 550;
+
+    .cart_action div p {
+        font-size: 1.35rem;
+    }
+
+    .cart_action .total h2,
+    .cart_action .total p {
+        font-size: 1.4rem;
+    }
+
+    .cart_action .checkout_btn {
+        padding: 10px 0;
         font-size: 1.3rem;
     }
-    
 }
