--- a/front-end/src/pages/Order/order.css
+++ b/front-end/src/pages/Order/order.css
@@ -7,9 +7,6 @@
     margin-bottom: 1rem;
 }
 
-.payment_ {
-    margin: 1.5rem 0;
-}
 
 .success_, .danger_ {
     background-color: #19b719;
@@ -27,134 +24,35 @@
     margin-top: 2rem;
 }
 
-.payment_ h2{
-    border-bottom: 1px solid #f2f2f2;
-    padding-bottom: 10px;
-    font-weight: 550;
-}
 
 
-.order__content {
+.paypal_btn {
     width: 100%;
-    /* background-color: red; */
-    padding: 15px 0 0 0;
-    border-bottom: 1px solid #fcfcfc;
+    padding: 0;
+    margin: 0;
 }
-
-.order__content:last-child {
-    border: none;
-    padding: 15px 0 0 0;
-}
-
-.order__content .item {
-    display: grid;
-    grid-template-columns: 12rem 1fr;
-    align-items: center;
-    /* justify-content: flex-start; */
-    /* background-color: yellow; */
-}
-
-.order__content .item_img {
-    width: 10rem;
-    height: 10rem;
-    /* background-color: red; */
-    margin-right: 10px;
-}
-
-.order__content .item_img img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.orderAction_container {
-    padding: 5rem 3.4rem 2rem 1rem;
-}
-
-
 
 
 
 /* Tablet Devices :: Media Queries */
 @media screen and (min-width : 768px) and (max-width : 1024px) {
-
-    .shipping_details h2,
-    .yourOrder h2 {
-        font-size: 2.4rem;
+    .orderAction_container {
+        padding: 3rem 3.4rem 2rem 3.3rem;
     }
-
-    .shipping_details p {
-        font-size: 2rem;
-    }
-
-    .order_contents {
-        align-items: flex-end;
-    }
-
-    .order_content {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .order_contents p {
-        font-size: 2rem;
-    }
-
-
-    .placeOrder div p {
-        font-size: 2rem;
-    }
-
-    .total h2 {
-        font-size: 2.3rem;
-    }
-
-    .placeOrder .placeOrder_btn {
-        padding: 11px 0;
-        font-size: 2rem;
-    }
-
 }
 
 
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
-    .shipping_details div {
-        margin-left: 0;
+    .order__content .item {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        /* justify-content: flex-start; */
+        /* background-color: yellow; */
     }
-
-    .shipping_details p {
-        font-size: 1.3rem;
+    .orderAction_container {
+        padding: 3rem 1.3rem 2rem 1.3rem;
     }
-
-    .order_contents p {
-        font-size: 1.3rem;
-    }
-
-    .order_content {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .placeOrder {
-        padding: 1rem;
-    }
-
-
-
-    .placeOrder div p {
-        font-size: 1.3rem;
-    }
-
-    .total h2 {
-        font-size: 1.6rem;
-    }
-
-    .placeOrder .placeOrder_btn {
-        padding: 9px 0;
-        font-size: 1.3rem;
-    }
-
-
-
 }
+
