--- a/front-end/src/pages/PlaceOrder/placeOrder.css
+++ b/front-end/src/pages/PlaceOrder/placeOrder.css
@@ -27,6 +27,16 @@
     font-size: 1.3rem;
 }
 
+.payment_ {
+    margin: 1.5rem 0;
+}
+
+.payment_ h2 {
+    border-bottom: 1px solid #f2f2f2;
+    padding-bottom: 10px;
+    font-weight: 550;
+}
+
 .order_info h2 {
     font-size: 1.4rem;
     font-weight: 550;
@@ -49,6 +59,7 @@
 .yourOrder h2 {
     border-bottom: 1px solid #f2f2f2;
     padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .order_content {
@@ -57,7 +68,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0;
+    padding: 20px 0;
     border-bottom: 1px solid #fcfcfc;
 }
 
@@ -91,8 +102,6 @@
 }
 
 .itemActions {
-    display: flex;
-    align-items: center;
     margin-left: 20px;
 }
 
@@ -105,10 +114,6 @@
 .itemActions .link {
     font-size: 0.9rem;
     text-decoration: none;
-}
-
-.itemActions .delete_btn {
-    margin-left: 10px;
 }
 
 
@@ -179,38 +184,118 @@
 
 /* Tablet Devices :: Media Queries */
 @media screen and (min-width : 768px) and (max-width : 1024px) {
-    .shipping_details h2, .yourOrder h2 {
-        font-size: 2.4rem;
-    }
-    .shipping_details p {
-        font-size: 2rem;
-    }
-
-    .order_contents {
-        align-items: flex-end;
-    }
-
-    .order_content {
-        flex-direction: column;
+    .order_container {
+        display: grid;
+        grid-template-columns: 1fr;
+        /* gap: 5px; */
         align-items: flex-start;
     }
 
-    .order_contents p {
+    .order_info {
+        padding: 2rem 2rem 2rem 2.1rem;
+    }
+
+    .shipping_details .head {
+        border-bottom: 2px solid #f2f2f2;
+    }
+
+
+    .shipping_details .link .icon {
+        font-size: 2.5rem;
+    }
+
+    .order_info h2 {
+        font-size: 2.3rem;
+        font-weight: 550;
+    }
+
+    .payment_ h2 {
+        /* font-size: 1.8rem; */
+        border-bottom: 2px solid #f2f2f2;
+        padding-bottom: 10px;
+        font-weight: 550;
+    }
+
+    .order_info span {
+        margin-right: 10px;
+    }
+
+    .order_info p {
+        font-size: 1.75rem;
+    }
+
+
+    .yourOrder {
+        margin-top: 3rem;
+    }
+
+    .yourOrder h2 {
+        border-bottom: 2px solid #f2f2f2;
+        padding-bottom: 10px;
+    }
+
+    .order_content {
+        width: 100%;
+        /* background-color: red; */
+        border-bottom: 2px solid #fcfcfc;
+    }
+
+
+    .order_content .item {
+        /* background-color: yellow; */
+    }
+
+    .item p {
+        font-size: 1.75rem;
+    }
+
+
+    .itemActions .icon {
         font-size: 2rem;
     }
 
-        
-    .placeOrder div p {
-        font-size: 2rem;
+    .itemActions .link {
+        font-size: 0.9rem;
+        text-decoration: none;
     }
 
-    .total h2 {
+
+    .Order_action {
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff;
+        -webkit-box-shadow: -3px -2px 0px 0px rgba(245, 245, 245, 0.61);
+        -moz-box-shadow: -3px -2px 0px 0px rgba(245, 245, 245, 0.61);
+        box-shadow: -3px -2px 0px 0px #fdfdfdbd;
+        padding: 2rem 3rem 2rem 2.1rem;
+    }
+
+    .Order_action h2 {
         font-size: 2.3rem;
     }
 
-    .placeOrder .placeOrder_btn {
-        padding: 11px 0;
-        font-size: 2rem;
+    .Order_action .info_,
+    .Order_action .total {
+        display: flex;
+        justify-content: space-between;
+        margin: 5px 0;
+        padding: 0;
+        border-bottom: 1px solid #f8f8f8;
+        padding-bottom: 10px;
+    }
+
+    .Order_action .info_ p {
+        font-size: 1.75rem;
+    }
+
+    .Order_action .total p {
+        font-size: 1.75rem;
+    }
+
+    .Order_action_btn {
+        width: 100%;
+        font-size: 1.75rem;
+        padding: 10px 0;
     }
 
 }
@@ -218,40 +303,132 @@
 
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
-    .shipping_details div {
-        margin-left: 0;
-    }
-
-    .shipping_details p {
-        font-size: 1.3rem;
-    }
-
-    .order_contents p {
-        font-size: 1.3rem;
-    }
-
-    .order_content {
-        flex-direction: column;
+    .order_container {
+        display: grid;
+        grid-template-columns: 1fr;
+        /* gap: 5px; */
         align-items: flex-start;
     }
 
-    .placeOrder {
-        padding: 1rem;
+    .order_info {
+        padding: 2rem 1rem 2rem 1rem;
     }
-    
 
+    .shipping_details .head {
+        border-bottom: 2px solid #f2f2f2;
+    }
+
+
+    .shipping_details .link .icon {
+        font-size: 2rem;
+    }
+
+    .order_info h2, .Order_action h2 {
+        font-size: 1.75rem;
+        font-weight: 550;
+    }
+
+    .payment_ h2 {
+        /* font-size: 1.8rem; */
+        border-bottom: 2px solid #f2f2f2;
+        padding-bottom: 10px;
+        font-weight: 550;
+    }
+
+    .order_info p {
+        font-size: 1.45rem;
+    }
+
+    .yourOrder h2, .Order_action h2 {
+        border-bottom: 2px solid #f2f2f2;
+        padding-bottom: 10px;
+    }
+
+    .order_content {
+        width: 100%;
+        /* background-color: red; */
+        border-bottom: 2px solid #faf9f9;
+        position: relative;
+    }
+
+
+    .order_content .item {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        /* background-color: yellow; */
+    }
+
+    .item_img {
+        width: 100%;
+        height: 15rem;
+        /* margin-right: 20px; */
+        /* background-color: red; */
         
-    .placeOrder div p {
-        font-size: 1.3rem;
     }
 
-    .total h2 {
-        font-size: 1.6rem;
+    .item_img img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    .placeOrder .placeOrder_btn {
-        padding: 9px 0;
-        font-size: 1.3rem;
+    .item p {
+        width: 100%;
+        font-size: 1.5rem;
+    }
+
+    .itemActions .icon {
+        font-size: 2rem;
+        position: absolute;
+        top: 10px;
+        right: 0;
+    }
+
+    .itemActions .link {
+        font-size: 0.9rem;
+        text-decoration: none;
+    }
+
+
+    .Order_action {
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff;
+        -webkit-box-shadow: -3px -2px 0px 0px rgba(245, 245, 245, 0.61);
+        -moz-box-shadow: -3px -2px 0px 0px rgba(245, 245, 245, 0.61);
+        box-shadow: -3px -2px 0px 0px #fdfdfdbd;
+        padding: 2rem 1rem 2rem 1rem;
+    }
+
+    .Order_action .info_,
+    .Order_action .total {
+        display: flex;
+        justify-content: space-between;
+        margin: 5px 0;
+        padding: 0;
+        border-bottom: 1px solid #f8f8f8;
+        padding-bottom: 10px;
+    }
+
+    .Order_action .info_ p {
+        font-size: 1.4rem;
+        font-weight: normal;
+    }
+
+    .Order_action .total p {
+        font-weight: 550;
+        font-size: 1.4rem;
+    }
+
+    .Order_action_btn {
+        width: 100%;
+        font-size: 1.5rem;
+        padding: 10px 0;
     }
 
 
