--- a/front-end/src/pages/Product/product.css
+++ b/front-end/src/pages/Product/product.css
@@ -1,5 +1,5 @@
 .product_container {
-    padding: 4rem 5rem 2rem 5rem;
+    padding: 4rem 3rem 2rem 3rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: flex-start;
@@ -11,6 +11,7 @@
     width: 100%;
     height: 30rem;
 }
+
 .product-img {
     width: 100%;
     height: 80%;
@@ -39,15 +40,6 @@ p {
     font-weight: normal;
 }
 
-.product-contents .qty {
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-}
-
-.msg {
-    margin-left: 10px;
-}
 
 .success, .danger {
     background-color: green;
@@ -62,22 +54,6 @@ p {
     background-color: #860c0c;
 }
 
-.qty .icon {
-    font-size: 1.3rem;
-    cursor: pointer;
-}
-
-.qty .icon:hover {
-    color: #1b1c1c;
-}
-
-.qty span {
-    margin: 0 5px;
-}
-
-.qty .minus {
-    margin-left: 10px;
-}
 
 .cart_btn, .product-contents .outOfStock {
     background-color: #18273a;
@@ -109,16 +85,16 @@ p {
  @media screen and (min-width : 768px) and (max-width : 1024px) {
     .product_container {
         width: 100%;
-        grid-template-columns: 1.2fr 1.5fr;
+        grid-template-columns: 1fr;
         gap: 1rem;
-        margin-bottom: 3.5rem;
+        margin-bottom: 1rem;
         /* background-color: red; */
     }
     
     
     .image_container {
         width: 100%;
-        height: 100%;
+        /* height: 50%; */
         /* background-color: rebeccapurple; */
     }
     .product-img {
@@ -129,10 +105,11 @@ p {
     
     .product-contents {
         width: 100%;
-        margin-top: 1rem;
+        margin-top: 0;
     }
     
     .name {
+        width: 100%;
         font-size: 2.2rem;
     }
     
@@ -164,50 +141,57 @@ p {
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
     .product_container {
+        padding: 4rem 1rem 2rem 1.5rem;
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        margin: 3.5rem 0;
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        margin-bottom: 1rem;
         /* background-color: red; */
     }
-    
-    
+
     .image_container {
         width: 100%;
-        height: 100%;
+        height: 20rem;
         /* background-color: rebeccapurple; */
     }
+
     .product-img {
         width: 100%;
         height: 100%;
         object-fit: contain;
     }
-    
+
     .product-contents {
         width: 100%;
-        margin-top: 1rem;
+        margin-top: 0;
     }
-    
+
     .name {
+        width: 100%;
+        font-size: 1.8rem;
+    }
+
+    p {
+        font-size: 1.5rem;
+    }
+
+    .des {
+        width: 100%;
+        font-size: 1.5rem;
+    }
+
+    .product-contents .qty {
         font-size: 1.7rem;
     }
-    
-    p {
-        font-size: 1.3rem;
-    }
-    
-    .des, .product-contents .qty {
-        font-size: 1.3rem;
-    }
-    
-    
+
     .qty .icon {
-        font-size: 1.6rem;
+        font-size: 2rem;
     }
-    
-    
-    .cart_btn {
-        padding: 10px;
+
+
+    .cart_btn,
+    .product-contents .outOfStock {
+        padding: 10px 0;
         font-size: 1.2rem;
     }
     
